--- a/package.json
+++ b/package.json
@@ -37,17 +37,25 @@
     "eslint": "^1.10.3",
     "eslint-loader": "^1.1.1",
     "eslint-plugin-react": "^3.11.3",
+    "express": "^4.13.3",
     "react-hot-loader": "^1.3.0",
     "redux-devtools": "^3.0.0",
+    "redux-devtools-dock-monitor": "^1.0.1",
+    "redux-devtools-log-monitor": "^1.0.1",
     "webpack": "^1.12.2",
-    "webpack-dev-server": "^1.12.1"
+    "webpack-dev-middleware": "^1.4.0",
+    "webpack-hot-middleware": "^2.6.0"
   },
   "dependencies": {
     "classnames": "^2.2.3",
+    "history": "^1.17.0",
     "jquery": "^2.1.4",
     "react": "^0.14.4",
     "react-dom": "^0.14.4",
+    "react-redux": "^4.0.0",
+    "react-router": "^1.0.3",
     "redux": "^3.0.4",
-    "react-redux": "^4.0.0"
+    "redux-logger": "^2.3.1",
+    "redux-simple-router": "^2.0.4"
   }
 }
