--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Boilerplate for ReactJS project with hot code reloading",
   "scripts": {
     "start": "node server.js",
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "test": "karma start"
   },
   "repository": {
     "type": "git",
@@ -37,7 +38,15 @@
     "eslint": "^1.10.3",
     "eslint-loader": "^1.1.1",
     "eslint-plugin-react": "^3.11.3",
+    "expect": "^1.13.0",
     "express": "^4.13.3",
+    "karma": "^0.13.15",
+    "karma-chrome-launcher": "^0.2.2",
+    "karma-cli": "0.1.1",
+    "karma-mocha": "^0.2.1",
+    "karma-sourcemap-loader": "^0.3.6",
+    "karma-webpack": "^1.7.0",
+    "mocha": "^2.3.4",
     "react-hot-loader": "^1.3.0",
     "redux-devtools": "^3.0.0",
     "redux-devtools-dock-monitor": "^1.0.1",
@@ -51,6 +60,7 @@
     "history": "^1.17.0",
     "jquery": "^2.1.4",
     "react": "^0.14.4",
+    "react-addons-test-utils": "0.14.4",
     "react-dom": "^0.14.4",
     "react-redux": "^4.0.0",
     "react-router": "^1.0.3",
